# python-project-template

./: .gitignore  .gitlint  .mypy.ini  .pylintrc  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  README.md  commitlint.config.js  install-dev.sh  package.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yaml  ci.yaml
.hooks/: pre-commit.json
.hooks/shared/: py-black.json  py-mypy.json  py-pytest.json  py-ruff.json  py-yamllint.json
app/: __init__.py  __main__.py  main.py
hooks/: commit-msg.json  pre-commit.json
hooks/partials/: python-changed-files
hooks/shared/: py-dataclass.json  py-literal.json  py-mdformat.json  py-mypy.json  py-pytest.json  py-ruff-format.json  py-ruff-lint.json  py-typeddict.json  py-yamllint.json
pytemplate/: __init__.py  __main__.py  main.py
tests/unit/: test_main.py
